[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros-msg-transform"
version = "0.3.1"
description = "Library to transform ROS messages to Python structures"
authors = [
    { name = "Konstantinos Panayiotou", email = "klpanagi@ece.auth.gr" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ros", "iot", "cps"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "setuptools>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "bump2version>=0.5.11",
    "pytest>=7.0.0",
]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
homepage = "https://github.com/robotics4all/ros-msg-transform"
repository = "https://github.com/robotics4all/ros-msg-transform"

[tool.setuptools]
packages = ["ros_msg_transform"]
